# AI-Systems-Labs

./: README.md
mylab2/: CMakeLists.txt  README.md  bindings.cpp  custom_conv.cpp  custom_dropout2d.cpp  custom_linear.cpp  custom_linear.py  example.py  setup.py
mylab3/: CmakeLists.txt  custom.cu  custom_cuda.cpp  setup.py
mylab3/custom_cuda/: custom.cu
